--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/AmritM1015/resume-react",
+  "homepage": "https://amritm1015.github.io/resume-react/",
   "name": "my-assignment-1",
   "version": "0.1.0",
   "private": true,
